@@ -1016,10 +1016,11 @@ func_efarequirements () {
 
     # pre-create the EFA backup directory
     mkdir -p /var/EFA/backup
+    mkdir -p /var/EFA/backup/KAM
 	
-	# pre-create the EFA lib directory
-	mkdir -P /var/EFA/lib
-	mkdir -P /var/EFA/lib/EFA-Configure
+    # pre-create the EFA lib directory
+    mkdir -P /var/EFA/lib
+    mkdir -P /var/EFA/lib/EFA-Configure
    
     # pre-create the EFA Trusted Networks Config
     touch /etc/sysconfig/EFA_trusted_networks
